tests/codegen/errors/codegen/strings/atom.codegen.40.collections.strings.rt.adjacent.strings/rt_adjacent_strings.mon
;; TEST-ID: tests.codegen.rt-adjacent-strings
;; TEST-TIER: known-fail
;; TEST-STATUS: quarantined-baseline-2026-06-15
;; TEST-KNOWN-FAILURE: diagnostic-mismatch
;; TEST-CODEGEN-ATOM: atom.codegen.40.collections.strings.rt.adjacent.strings
;; TEST-QUALITY: branch-regression
;; TEST-SUBSET: strings
;; TEST-CATEGORY: 40-collections
;; TEST-SECTION: codegen
;; TEST-CONTEXT: monadc.context.language.adjacent-strings, monadc.context.tests.expected-failures
;; TEST-PURPOSE: Connected string literals produce a targeted syntax diagnostic instead of a later type error.
;; TEST-ATOM: "hello""world" is rejected with guidance to write one string literal.
;; TEST-EXPECT: fail:compile

;; TEST-COVERAGE: codegen.c:40-collections/strings branch family
;; TEST-USES-ATOM: atom.codegen.category.40.collections
;; TEST-MENU: errors/codegen/strings/atom.codegen.40.collections.strings.rt.adjacent.strings
;; TEST-MENU-PATH: codegen/errors/codegen/strings/atom.codegen.40.collections.strings.rt.adjacent.strings
;; TEST-ATOM-LEAF: atom.codegen.40.collections.strings.rt.adjacent.strings
;; TEST-CLI-TARGET: codegen errors codegen strings
(module Main)
(show "hello""world")
